# code-signal-rust

./: Cargo.toml
src/: main.rs
src/solved/: adjacentElementsProduct.rs  almostIncreasingSequence.rs  centuryFromYear.rs  checkPalindrome.rs  makeArrayConsecutive2.rs  mod.rs  shapeArea.rs
