[package]
name = "code-signal"
version = "0.1.0"
authors = ["Triet <triet.nguyen@centrality.ai>"]
edition = "2018"
include = ["src/**/*, cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0
debug = true